SupernovaMPE/samples/Errors/CommandError.nova
Application title = Error.

I want window and window title = Error.

You show listbox